remueve el animal del array una vez llamado para evitar keys duplicadas en el map